fix: remove extra div and add ul

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2 class="name">Ключевые навыки</h2>
                 </div>
                 <div class="titles-and-contents">
-                    <div class="contents">
+                    <ul class="contents">
                         <li class="content">Амбулаторный прием пациентов</li>
                         <li class="content">Работа с пациентами на выезде</li>
                         <li class="content">Сбор анамнеза заболевания</li>
@@ -124,10 +124,9 @@
                         <li class="content">Санитарно-просветительская работа</li>
                         <li class="content">Ответственность, организованность, этичность, такстичность</li>
                         <li class="content">Языки: русский, английский (А2)</li>
-                    </div>
+                    </ul>
                 </div>
             </div>
-        </div>
         </div>
 
     </main>
