feat: add adaptive

--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
 <body>
     <header>.</header>
     <main>
-        <div class="container photo-info">
-            <div class="photo"></div>
-            <div class="info">
+
+        <div class="container1">
+            <div class="photo-and-icons">
+                <div class="photo"></div>
+                <div class="contacts-icons">
+                    <a href="tel:+995598007532"><img class="contacts-icon" src="./assets/telephone.svg"
+                            alt="телефон"></a>
+                    <a href="https://t.me/liliyafamiliya/" target="_blank"><img class="contacts-icon"
+                            src="./assets/telegram.svg" alt="телеграм"></a>
+                    <a href="mailto:lilyalapetina@gmail.com" target="_blank"><img class="contacts-icon"
+                            src="./assets/email.png" alt="почта"></a>
+                </div>
+            </div>
+
+            <div class="data">
                 <h1 class="name">Лапетина Лилия Олеговна</h1>
                 <div class="titles-and-contents">
                     <div class="titles">
@@ -39,93 +51,78 @@
                         <div class="content">+995-59-800-7532</div>
                     </div>
                 </div>
-                <div class="contacts-icons">
-                    <a href="tel:+995598007532"><img class="contacts-icon" src="./assets/telephone.svg"
-                            alt="телефон"></a>
-                    <a href="https://t.me/liliyafamiliya/" target="_blank"><img class="contacts-icon"
-                            src="./assets/telegram.svg" alt="телеграм"></a>
-                    <a href="mailto:lilyalapetina@gmail.com" target="_blank"><img class="contacts-icon"
-                            src="./assets/email.png" alt="почта"></a>
+            </div>
+
+        </div>
+
+        <div class="line"></div>
+
+        <div class="container2">
+            <div class="logo-and-name">
+                <img class="logo" src="./assets/clinic.svg" alt="clinic">
+                <h2 class="name">Образование</h2>
+            </div>
+            <div class="titles-and-contents">
+                <div class="titles">
+                    <div class="title">Учебное заведение:</div>
+                    <div class="title">Факультет:</div>
+                    <div class="title">Форма обучения:</div>
+                    <div class="title">Год окончания:</div>
+                    <div class="title">Специальность:</div>
+                </div>
+                <div class="contents">
+                    <div class="content"><a href="https://www.bsmu.by/" target="_blank">БГМУ</a></div>
+                    <div class="content">Лечебное дело</div>
+                    <div class="content">Очная</div>
+                    <div class="content">2019</div>
+                    <div class="content">Врач общей практики</div>
                 </div>
             </div>
         </div>
 
         <div class="line"></div>
 
-        <div class="container">
-            <div class="info">
-                <div class="logo-and-name">
-                    <img class="logo" src="./assets/clinic.svg" alt="clinic">
-                    <h2 class="name">Образование</h2>
+        <div class="container3">
+            <div class="logo-and-name">
+                <img class="logo" src="./assets/stethoscope.svg" alt="stethoscope">
+                <h2 class="name">Опыт работы</h2>
+            </div>
+            <div class="titles-and-contents">
+                <div class="titles">
+                    <div class="title">Организация:</div>
+                    <div class="title">Период работы:</div>
+                    <div class="title">Должность:</div>
                 </div>
-                <div class="titles-and-contents">
-                    <div class="titles">
-                        <div class="title">Учебное заведение:</div>
-                        <div class="title">Факультет:</div>
-                        <div class="title">Форма обучения:</div>
-                        <div class="title">Год окончания:</div>
-                        <div class="title">Специальность:</div>
-                    </div>
-                    <div class="contents">
-                        <div class="content"><a href="https://www.bsmu.by/" target="_blank">Белорусский государственный
-                                медицинский
-                                университет</a></div>
-                        <div class="content">Лечебное дело</div>
-                        <div class="content">Очная</div>
-                        <div class="content">2019</div>
-                        <div class="content">Врач общей практики</div>
-                    </div>
+                <div class="contents">
+                    <div class="content"><a href="http://mogcp.by/clinic/clinics-adults/clinic4"
+                            target="_blank">Могилевская поликлиника №4</a></div>
+                    <div class="content">2019-2022</div>
+                    <div class="content">Врач общей практики</div>
+
                 </div>
             </div>
         </div>
 
         <div class="line"></div>
 
-        <div class="container">
-            <div class="info">
-                <div class="logo-and-name">
-                    <img class="logo" src="./assets/stethoscope.svg" alt="stethoscope">
-                    <h2 class="name">Опыт работы</h2>
-                </div>
-                <div class="titles-and-contents">
-                    <div class="titles">
-                        <div class="title">Организация:</div>
-                        <div class="title">Период работы:</div>
-                        <div class="title">Должность:</div>
-                    </div>
-                    <div class="contents">
-                        <div class="content"><a href="http://mogcp.by/clinic/clinics-adults/clinic4"
-                                target="_blank">Могилевская поликлиника №4</a></div>
-                        <div class="content">2019-2022</div>
-                        <div class="content">Врач общей практики</div>
-
-                    </div>
-                </div>
+        <div class="container4">
+            <div class="logo-and-name">
+                <img class="logo" src="./assets/cor.svg" alt="cor">
+                <h2 class="name">Ключевые навыки</h2>
             </div>
-        </div>
-
-        <div class="line"></div>
-
-        <div class="container">
-            <div class="info">
-                <div class="logo-and-name">
-                    <img class="logo" src="./assets/cor.svg" alt="cor">
-                    <h2 class="name">Ключевые навыки</h2>
-                </div>
-                <div class="titles-and-contents">
-                    <ul class="contents">
-                        <li class="content">Амбулаторный прием пациентов</li>
-                        <li class="content">Работа с пациентами на выезде</li>
-                        <li class="content">Сбор анамнеза заболевания</li>
-                        <li class="content">Назначение диагностических процедур и исследований</li>
-                        <li class="content">Выдача справок и ЛВН</li>
-                        <li class="content">Работа с медицинской документацией</li>
-                        <li class="content">Составление плана лечения</li>
-                        <li class="content">Санитарно-просветительская работа</li>
-                        <li class="content">Ответственность, организованность, этичность, такстичность</li>
-                        <li class="content">Языки: русский, английский (А2)</li>
-                    </ul>
-                </div>
+            <div class="titles-and-contents">
+                <ul class="contents skills">
+                    <li class="content">Амбулаторный прием пациентов</li>
+                    <li class="content">Работа с пациентами на выезде</li>
+                    <li class="content">Сбор анамнеза заболевания</li>
+                    <li class="content">Назначение диагностических процедур и исследований</li>
+                    <li class="content">Выдача справок и ЛВН</li>
+                    <li class="content">Работа с медицинской документацией</li>
+                    <li class="content">Составление плана лечения</li>
+                    <li class="content">Санитарно-просветительская работа</li>
+                    <li class="content">Ответственность, организованность, этичность, такстичность</li>
+                    <li class="content">Языки: русский, английский (А2)</li>
+                </ul>
             </div>
         </div>
 
